# muhuri

./: .gitignore  AUDIT.md  CLAUDE.md  NEXT_STEPS.md  PITCH.md  README.md  SPEC.md  demo.py  muhuri-demo.html  pyproject.toml
.github/workflows/: ci.yml
docs/: standards.md
muhuri/: __init__.py  canonical.py  caveats.py  credential.py  keys.py  pop.py  revocation.py  verify.py
tests/: test_muhuri.py  test_properties.py  test_redteam_fixes.py  test_vectors.py  vectors.json
tools/: gen_vectors.py
