[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "muhuri"
version = "0.2.0"
description = "Splice-proof, offline-attenuating delegation credentials for AI-agent chains"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["cryptography>=42", "cbor2>=5.6"]

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6.100"]

[tool.setuptools]
packages = ["muhuri"]
